--- a/examples/vision/ipynb/image_classification_efficientnet_fine_tuning.ipynb
+++ b/examples/vision/ipynb/image_classification_efficientnet_fine_tuning.ipynb
@@ -238,6 +238,70 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "one_hot_labels = [x for _,x in  ds_test.unbatch().as_numpy_iterator()]\n",
+        "test_labels = np.argmax(one_hot_labels, axis=1)\n",
+        "test_labels[:100]"
+      ],
+      "metadata": {
+        "id": "AgJQgQbU93y8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions = model.predict(ds_test, batch_size=1)\n",
+        "predicted = predictions.argmax(axis=1)\n",
+        "predicted[:100]"
+      ],
+      "metadata": {
+        "id": "Y_lp6XKW98K7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sklearn.metrics as metrics\n",
+        "\n",
+        "print('Overall accuracy = ' + str(round(metrics.accuracy_score(test_labels, predicted), 4)))\n",
+        "\n",
+        "unique_labels, label_counts = np.unique(test_labels, return_counts=True)\n",
+        "class_precision = metrics.precision_score(test_labels, predicted, labels=unique_labels, average=None)\n",
+        "class_recall = metrics.recall_score(test_labels, predicted, labels=unique_labels, average=None)\n",
+        "\n",
+        "sum_label_counts = np.sum(label_counts)\n",
+        "weighted_average = lambda x: round(np.sum(np.divide(x * label_counts, sum_label_counts)), 4)\n",
+        "print('Average precision = ' + str(weighted_average(class_precision)))\n",
+        "print('Average recall = ' + str(weighted_average(class_recall)))"
+      ],
+      "metadata": {
+        "id": "qkph16nP-PLN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "confusion_matrix = metrics.confusion_matrix(test_labels, predicted)\n",
+        "\n",
+        "plt.figure(figsize = (12,9))\n",
+        "p = plt.imshow(np.log(np.divide(confusion_matrix + 1.0, np.sum(confusion_matrix, axis=1))))\n",
+        "cb = plt.colorbar(p)\n",
+        "_=cb.set_label('Log count')"
+      ],
+      "metadata": {
+        "id": "ZlyYoPYo-PSW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "vSKfkknS6wOO"
@@ -411,11 +475,20 @@
         ")\n",
         "model.compile(optimizer=\"adam\", loss=\"categorical_crossentropy\", metrics=[\"accuracy\"])\n",
         "\n",
-        "model.summary()\n",
-        "\n",
-        "epochs = 40  # @param {type: \"slider\", min:10, max:100}\n",
-        "hist = model.fit(ds_train, epochs=epochs, validation_data=ds_test)\n"
+        "model.summary()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "epochs = 30  # @param {type: \"slider\", min:10, max:100}\n",
+        "hist = model.fit(ds_train, epochs=epochs, validation_data=ds_test)\n"
+      ],
+      "metadata": {
+        "id": "dMIcnMRi8weU"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -501,7 +574,7 @@
         "\n",
         "    # Compile\n",
         "    model = keras.Model(inputs, outputs, name=\"EfficientNet\")\n",
-        "    optimizer = keras.optimizers.Adam(learning_rate=1e-2)\n",
+        "    optimizer = keras.optimizers.Adam(learning_rate=1e-4, weight_decay=0.01)\n",
         "    model.compile(\n",
         "        optimizer=optimizer, loss=\"categorical_crossentropy\", metrics=[\"accuracy\"]\n",
         "    )\n",
@@ -584,7 +657,7 @@
         "        if not isinstance(layer, layers.BatchNormalization):\n",
         "            layer.trainable = True\n",
         "\n",
-        "    optimizer = keras.optimizers.Adam(learning_rate=1e-5)\n",
+        "    optimizer = keras.optimizers.Adam(learning_rate=1e-5, weight_decay=0.01)\n",
         "    model.compile(\n",
         "        optimizer=optimizer, loss=\"categorical_crossentropy\", metrics=[\"accuracy\"]\n",
         "    )\n",
